corrected style of Movie Container vote button is now visible in Movie View

--- a/movies/static/movies/css/style.css
+++ b/movies/static/movies/css/style.css
@@ -214,7 +214,8 @@ input[type="password"]::placeholder {
   justify-content: center;
   align-items: center;
   gap: 20px;
-  margin-top: 120px;
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 .movieItem {
